POM module update