@@ -1,5 +1,5 @@
 /*
-	Copyright 2008-2014 ITACA-TSB, http://www.tsb.upv.es
+	Copyright 2008-2010 ITACA-TSB, http://www.tsb.upv.es
 	Instituto Tecnologico de Aplicaciones de Comunicacion 
 	Avanzadas - Grupo Tecnologias para la Salud y el 
 	Bienestar (TSB)
@@ -24,124 +24,117 @@ package org.universAAL.context.che;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.universAAL.context.che.Hub.Log;
+import org.osgi.framework.BundleContext;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.universAAL.context.che.database.Backend;
-import org.universAAL.middleware.container.ModuleContext;
+import org.universAAL.context.che.ontology.ContextEvent;
 import org.universAAL.middleware.context.owl.ContextProvider;
 import org.universAAL.middleware.service.CallStatus;
 import org.universAAL.middleware.service.ServiceCall;
 import org.universAAL.middleware.service.ServiceCallee;
 import org.universAAL.middleware.service.ServiceResponse;
 import org.universAAL.middleware.service.owls.process.ProcessOutput;
-import org.universAAL.ontology.che.ContextEvent;
 
 /**
  * The CHe service callee receives all service calls issued to the CHe through
- * the service bus.
+ * the service bus
  * 
  * @author <a href="mailto:alfiva@itaca.upv.es">Alvaro Fides Valero</a>
  * 
  */
 public class ContextHistoryCallee extends ServiceCallee {
-    private static final ServiceResponse FAILURE = new ServiceResponse(
+    private static final ServiceResponse invalidInput = new ServiceResponse(
 	    CallStatus.serviceSpecificFailure);
-    /**
-     * Logger.
-     */
-    private static Log log = Hub.getLog(ContextHistoryCallee.class);
+    private final static Logger log = LoggerFactory
+	    .getLogger(ContextHistoryCallee.class);
 
-    /**
-     * The DB of the store.
-     */
-    private Backend db;
-
-    /**
-     * Main constructor.
-     * 
-     * @param context
-     *            The uaal module context
-     * @param dbstore
-     *            The store
-     */
-    ContextHistoryCallee(ModuleContext context, Backend dbstore) {
-	super(context, ContextHistoryServices.PROFILES);
-	this.db = dbstore;
+    static {
+	invalidInput.addOutput(new ProcessOutput(
+		ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Invalid input!"));
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see
-     * org.universAAL.middleware.service.ServiceCallee#communicationChannelBroken
-     * ()
-     */
+    private Backend db;
+
+    ContextHistoryCallee(BundleContext context, Backend db) {
+	super(context, ContextHistoryServices.profiles);
+	this.db = db;
+    }
+
     public void communicationChannelBroken() {
 	// TODO Auto-generated method stub
 
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see
-     * org.universAAL.middleware.service.ServiceCallee#handleCall(org.universAAL
-     * .middleware.service.ServiceCall)
-     */
     public ServiceResponse handleCall(ServiceCall call) {
-	log.info("handleCall", "CHe received a service call");
+	log.info("CHe received a service call");
 	if (call == null) {
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Corrupt call"));
-	    return FAILURE;
+	    invalidInput
+		    .addOutput(new ProcessOutput(
+			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
+			    "Corrupt call"));
+	    return invalidInput;
 	}
+
 	String operation = call.getProcessURI();
 	if (operation == null) {
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Corrupt call"));
-	    return FAILURE;
+	    invalidInput
+		    .addOutput(new ProcessOutput(
+			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
+			    "Corrupt call"));
+	    return invalidInput;
 	}
+
 	if (operation
 		.startsWith(ContextHistoryServices.SERVICE_DO_SPARQL_QUERY)) {
-	    log.info("handleCall", "Received call was SERVICE_DO_SPARQL_QUERY");
+	    log.info("Received call was SERVICE_DO_SPARQL_QUERY");
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_QUERY);
 	    if (input == null) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input"));
-		return FAILURE;
+		return invalidInput;
 	    }
 	    return execSPARQLQuery((String) input);
+
 	} else if (operation
 		.startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_BY_SPARQL)) {
-	    log.info("handleCall",
-		    "Received call was SERVICE_GET_EVENTS_BY_SPARQL");
+	    log.info("Received call was SERVICE_GET_EVENTS_BY_SPARQL");
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_QUERY);
 	    if (input == null) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input"));
-		return FAILURE;
+		return invalidInput;
 	    }
+
 	    return execSPARQLQueryForEvents((String) input);
+
 	} else {
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_EVENT);
 	    ContextEvent inputevent;
+
 	    if ((input == null) || (!(input instanceof ContextEvent))) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input (ContextEvent)"));
-		return FAILURE;
+		return invalidInput;
 	    } else {
 		inputevent = (ContextEvent) input;
 	    }
+
 	    String sub, typ, pre;
 	    Object obj;
-	    Integer con;
+	    Integer acc, con;
 	    Long exp, tst;
 	    ContextProvider cop;
+
 	    sub = (inputevent.getSubjectURI() != null && !inputevent
 		    .getRDFSubject().isAnon()) ? inputevent.getSubjectURI()
 		    : null;
@@ -151,6 +144,8 @@ public class ContextHistoryCallee extends ServiceCallee {
 		    .getRDFPredicate() : null;
 	    obj = (inputevent.getRDFObject() != null) ? inputevent
 		    .getRDFObject() : null;
+	    acc = (inputevent.getAccuracy() != null) ? new Integer(inputevent
+		    .getAccuracy().ord()) : null;
 	    con = (inputevent.getConfidence() != null) ? inputevent
 		    .getConfidence() : null;
 	    exp = (inputevent.getExpirationTime() != null) ? inputevent
@@ -159,152 +154,119 @@ public class ContextHistoryCallee extends ServiceCallee {
 		    .getTimestamp() : null;
 	    cop = (inputevent.getProvider() != null) ? inputevent.getProvider()
 		    : null;
+
 	    if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_FROM_TIMESTAMP)) {
-		log.info("handleCall",
-			"Received call was SERVICE_GET_EVENTS_FROM_TIMESTAMP");
+		log.info("Received call was SERVICE_GET_EVENTS_FROM_TIMESTAMP");
+
 		Object tstinput = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_FROM);
-		Long tstinputValue = Long.valueOf("0");
+		Long tstinputValue = new Long("0");
 		if ((tstinput == null) || (!(tstinput instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinputValue = (Long) tstinput;
 		}
 		List results = db.retrieveEventsFromTstmp(sub, typ, pre, obj,
-			con, exp, cop, tst, tstinputValue);
+			acc, con, exp, cop, tst, tstinputValue);
 		ServiceResponse response = new ServiceResponse(
 			CallStatus.succeeded);
 		response.addOutput(new ProcessOutput(
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
-	    } else if (operation
+	    }
+
+	    else if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_TO_TIMESTAMP)) {
-		log.info("handleCall",
-			"Received call was SERVICE_GET_EVENTS_TO_TIMESTAMP");
+		log.info("Received call was SERVICE_GET_EVENTS_TO_TIMESTAMP");
 		Object tstinput = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_TO);
-		Long tstinputValue = Long.valueOf("0");
+		Long tstinputValue = new Long("0");
 		if ((tstinput == null) || (!(tstinput instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinputValue = (Long) tstinput;
 		}
 		List results = db.retrieveEventsToTstmp(sub, typ, pre, obj,
-			con, exp, cop, tst, tstinputValue);
+			acc, con, exp, cop, tst, tstinputValue);
 		ServiceResponse response = new ServiceResponse(
 			CallStatus.succeeded);
 		response.addOutput(new ProcessOutput(
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
-	    } else if (operation
+	    }
+
+	    else if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_BETWEEN_TIMESTAMPS)) {
-		log.info("handleCall",
-			"Received call was SERVICE_GET_EVENTS_BETWEEN_TIMESTAMPS");
+		log
+			.info("Received call was SERVICE_GET_EVENTS_BETWEEN_TIMESTAMPS");
 		Object tstinput1 = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_FROM);
 		Object tstinput2 = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_TO);
-		Long tstinput1Value = Long.valueOf("0");
+		Long tstinput1Value = new Long("0");
 		if ((tstinput1 == null) || (!(tstinput1 instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinput1Value = (Long) tstinput1;
 		}
-		Long tstinput2Value = Long.valueOf("0");
+		Long tstinput2Value = new Long("0");
 		if ((tstinput2 == null) || (!(tstinput2 instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinput2Value = (Long) tstinput2;
 		}
-		List results = db
-			.retrieveEventsBetweenTstmp(sub, typ, pre, obj, con,
-				exp, cop, tst, tstinput1Value, tstinput2Value);
+		List results = db.retrieveEventsBetweenTstmp(sub, typ, pre,
+			obj, acc, con, exp, cop, tst, tstinput1Value,
+			tstinput2Value);
 		ServiceResponse response = new ServiceResponse(
 			CallStatus.succeeded);
 		response.addOutput(new ProcessOutput(
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
 	    }
+
 	}
-	FAILURE.addOutput(new ProcessOutput(
+	invalidInput.addOutput(new ProcessOutput(
 		ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Invalid call"));
-	return FAILURE;
+	return invalidInput;
     }
 
-    /**
-     * Perform SPARQL query.
-     * 
-     * @param input
-     *            The query
-     * @return Response
-     */
     private ServiceResponse execSPARQLQuery(String input) {
 	try {
 	    String results = db.queryBySPARQL(input);
-	    if (results == null) {
-		log.error("execSPARQLQuery",
-			"Error executing specific SPARQL: the backend returned null");
-		FAILURE.addOutput(new ProcessOutput(
-			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-			"Null response to SPARQL"));
-		return FAILURE;
-	    }
 	    ServiceResponse response = new ServiceResponse(CallStatus.succeeded);
 	    response.addOutput(new ProcessOutput(
 		    ContextHistoryServices.OUTPUT_RESULT, results));
 	    return response;
 	} catch (Exception e) {
-	    log.error("execSPARQLQuery",
-		    "Error executing specific SPARQL: {} ", e);
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-		    "Error executing specific SPARQL"));
-	    return FAILURE;
+	    log.error("Error executing specific SPARQL: {} ", e);
+	    return invalidInput;
 	}
     }
 
-    /**
-     * Perform SPARQL query.
-     * 
-     * @param input
-     *            The query
-     * @return Response with events
-     */
     private ServiceResponse execSPARQLQueryForEvents(String input) {
 	try {
 	    ServiceResponse response = new ServiceResponse(CallStatus.succeeded);
 	    ArrayList results = db.retrieveEventsBySPARQL(input);
-	    if (results == null) {
-		log.error("execSPARQLQueryForEvents",
-			"Error executing specific SPARQL for events: the backend returned null");
-		FAILURE.addOutput(new ProcessOutput(
-			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-			"Null response to SPARQL"));
-		return FAILURE;
-	    }
 	    response.addOutput(new ProcessOutput(
 		    ContextHistoryServices.OUTPUT_EVENTS, results));
 	    return response;
 	} catch (Exception e) {
-	    log.error("execSPARQLQueryForEvents",
-		    "Error executing SPARQL for events: {} ", e);
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-		    "Error executing specific SPARQL"));
-	    return FAILURE;
+	    log.error("Error executing SPARQL for events: {} ", e);
+	    return invalidInput;
 	}
     }
 
